--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
